--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scrolling-carousel": "^1.0.2",
     "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.18",
+    "@types/redux": "^3.6.0"
   }
 }
