--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0"
-  }
+  },
+  "homepage": "https://kris-alexwa.github.io/liis-test-task-react/"
 }
